# ChangeLog for games-fps/ut2003
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/ut2003/ChangeLog,v 1.26 2004/09/01 20:27:08 wolf31o2 Exp $

  01 Sep 2004; Chris Gianelloni <wolf31o2@gentoo.org> -files/ut2003,
  ut2003-2225-r3.ebuild:
  Switching to games_make_wrapper for starter script.

*ut2003-2225-r3 (08 Jul 2004)

  08 Jul 2004; Chris Gianelloni <wolf31o2@gentoo.org> -ut2003-2225-r2.ebuild,
  +ut2003-2225-r3.ebuild:
  Updated to close bug #54726.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  ut2003-2225-r2.ebuild:
  virtual/glibc -> virtual/libc

  26 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org> ut2003-2225-r2.ebuild:
  Fixing problem due to new eclass.

  26 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org> ut2003-2225-r2.ebuild:
  Added games-util/uz2unpack to DEPEND.

  03 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> ut2003-2225-r2.ebuild:
  Ddir into src_install; fix dir -> die typo; skip unnecessary dodir

  01 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org> ut2003-2225-r2.ebuild:
  Adding some ewarn info at the bottom to inform users of potential security
  problems and fixes for hosting a server.

*ut2003-2225-r2 (01 Apr 2004)

  01 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org> ut2003-2225-r1.ebuild,
  ut2003-2225-r2.ebuild, files/ucc:
  Updated with patches to fix recent DoS in Unreal engine based games. See bug
  #44351 for more information.

  22 Mar 2004; Chris Gianelloni <wolf31o2@gentoo.org> ut2003-2225-r1.ebuild:
  Modified sed line to change sed from working on portage tree to working on
  file in ${D}. Closing bug #45287.

  19 Mar 2004; Chris Gianelloni <wolf31o2@gentoo.org> ut2003-2225-r1.ebuild:
  Fixing sed problem and (hopefully) closing bug #35603.

  16 Mar 2004; Chris Gianelloni <wolf31o2@gentoo.org> ut2003-2225-r1.ebuild:
  Changed sed lines to use sed -i.

  27 Feb 2004; Chris Gianelloni <wolf31o2@gentoo.org> ut2003-2225-r1.ebuild,