@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/ut2003
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/ut2003/ChangeLog,v 1.26 2004/09/01 20:27:08 wolf31o2 Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-fps/ut2003/ChangeLog,v 1.27 2005/06/27 22:33:25 wolf31o2 Exp $
+
+  27 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org> ut2003-2225-r3.ebuild:
+  Changed to use external loki_patch for future compatibility.
 
   01 Sep 2004; Chris Gianelloni <wolf31o2@gentoo.org> -files/ut2003,
   ut2003-2225-r3.ebuild:
